[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phase0-engine"
version = "1.1.0"
description = "국내 주식 데이트레이딩 자동매매 시스템 — Phase 0 계산 엔진 (단일 진실 공급원)"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "numpy>=1.24",
    "pandas>=2.2",   # phase0.data.pykrx_ingest 클렌징 로직 — 테스트도 이 타입을 다룸
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
data = [
    "pykrx>=1.2",       # 실제 KRX 네트워크 호출 전용 — pykrx_ingest의 기본 fetcher에서만 사용
    "requests>=2.32",   # KIS Open API 직접 호출용 (kis_credentials, check_minute_bar_history)
    "python-dotenv>=1.0",  # .env 파일에서 KIS_* 인증정보 로드
]
ml = [
    "scikit-learn>=1.4",   # GDR 신호 스마트 필터(phase0.ml.gdr_filter) — 클래식 ML만, 딥러닝 없음
]

[tool.setuptools.packages.find]
include = ["phase0*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
